--- a/style.css
+++ b/style.css
@@ -6,10 +6,18 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 .qanda_text {
-  display: none;
+  margin: 0;
+  padding: 0;
+  max-height: 0px;
+  margin-top: 10px;
+  opacity: 0;
+  visibility: hidden;
+  transition-duration: 1s;
 }
 .qanda_item.active .qanda_text {
-  display: block;
+  opacity: 1;
+  visibility: visible;
+  max-height: 700px;
 }
 
 .qanda_question {
@@ -27,16 +35,10 @@
   padding: 15px 10px;
   border-radius: 5px;
   position: relative;
-  transition: max-height 3s, background 0.5s ease;
-  max-height: 50px;
+  transition-duration: 1s;
 }
 .qanda_item.active {
   background-color: rgb(231, 231, 231);
-  max-height: 700px;
-}
-.qanda_item.hide {
-  background-color: #fff;
-  max-height: 50px;
 }
 
 #qanda_container div:last-child {
